# mlflow_on_aws

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/workflows/: validation.yaml
mlflow_on_aws/: mlflow_on_aws_stack.py
tests/unit/: test_mlflow_on_aws_stack.py
