[tool.poetry]
name = "mlflow-on-aws"
version = "0.1.0"
description = ""
authors = ["anya-mb <anyamb@yandex.ru>"]
readme = "README.md"
packages = [{include = "mlflow_on_aws"}]

[tool.poetry.dependencies]
python = "^3.10"
constructs = "3.3.69"
aws-cdk-aws-ecs = "^1.204.0"
aws-cdk-aws-ecr = "^1.204.0"
aws-cdk-aws-ecs-patterns = "^1.204.0"
aws-cdk-aws-iam = "^1.204.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"